@@ -3,10 +3,10 @@ name: ruff and mypy checks
 on:
   push:
     branches:
-      - master
+      - main
   pull_request:
     branches:
-      - master
+      - main
 
 jobs:
   mypy:
